# RouteMaster

./: .gitignore  README.md  cli.sh  index.html  pyproject.toml  replit.nix  script.js  styles.css  test.json  test_db_connection.py
Data/: ACTSC.csv  ACTSC.xlsx  AMATH.csv  AMATH.xlsx  CO.csv  COMM.csv  MATBUS.csv  STAT.csv
backend/: package-lock.json  package.json  planGeneration.js
backend/backend/app/database/: actions.py  models.py
frontend/public/: index.html
